--- a/index.html
+++ b/index.html
@@ -27,6 +27,130 @@
                 <img src="images\banner.jpg" alt="">
             </div>
         </section>
+        <section class="photos">
+            <div class="players">
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-1.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-2.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-3.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-4.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-5.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-6.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-7.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-8.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-9.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-10.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-11.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-12.jpg" alt="">
+                    </div>
+                    <div class="player-detail">
+                        <h3>Player Name</h3>
+                        <p>The player is a world famous football player. He is a very energetic player. He has done
+                            excellent performance in football history. </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
