--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <!-- Icons -->
+    <script src="https://kit.fontawesome.com/2ce3f8d283.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -151,6 +154,18 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+
+            <div class="logo">
+                <img src="images/Logo.jpg" alt="">
+            </div>
+            <div class="icons">
+                <a href=""><i class="fab fa-twitter-square"></i></a>
+                <a href=""><i class="fas fa-envelope"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+            </div>
+        </footer>
     </main>
 </body>
 
