--- a/index.html
+++ b/index.html
@@ -159,11 +159,16 @@
             <div class="logo">
                 <img src="images/Logo.jpg" alt="">
             </div>
-            <div class="icons">
-                <a href=""><i class="fab fa-twitter-square"></i></a>
-                <a href=""><i class="fas fa-envelope"></i></a>
-                <a href=""><i class="fab fa-linkedin"></i></a>
-                <a href=""><i class="fab fa-facebook-square"></i></a>
+            <div>
+                <div class="icons">
+                    <a href=""><i class="fab fa-twitter-square enlarge"></i></a>
+                    <a href=""><i class="fas fa-envelope enlarge"></i></a>
+                    <a href=""><i class="fab fa-linkedin enlarge"></i></a>
+                    <a href=""><i class="fab fa-facebook-square enlarge"></i></a>
+                </div>
+                <div>
+                    <p class="copyright">copyright &copy; 2022 Football</p>
+                </div>
             </div>
         </footer>
     </main>
