--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <h2>Conmebol</h2>
                 <h2>Copa America</h2>
                 <h2>2021</h2>
+                <p class="button">Watch Live →</p>
             </div>
             <div class="banner">
                 <img src="images\banner.jpg" alt="">
@@ -154,24 +155,26 @@
                 </div>
             </div>
         </section>
-        <footer class="footer">
 
-            <div class="logo">
-                <img src="images/Logo.jpg" alt="">
+    </main>
+    <footer class="footer">
+
+        <div class="logo">
+            <img src="images/Logo.jpg" alt="">
+        </div>
+        <div>
+            <div class="icons">
+                <a target="_blank" href="https://www.twitter.com/"><i class="fab fa-twitter-square fa-2x"></i></a>
+                <a target="_blank" href="https://www.gmail.com/"><i class="fas fa-envelope fa-2x"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/"><i class="fab fa-linkedin fa-2x"></i></a>
+                <a target="_blank" href="https://www.facebook.com/"><i class="fab fa-facebook-square fa-2x"></i></a>
             </div>
             <div>
-                <div class="icons">
-                    <a href=""><i class="fab fa-twitter-square enlarge"></i></a>
-                    <a href=""><i class="fas fa-envelope enlarge"></i></a>
-                    <a href=""><i class="fab fa-linkedin enlarge"></i></a>
-                    <a href=""><i class="fab fa-facebook-square enlarge"></i></a>
-                </div>
-                <div>
-                    <p class="copyright">copyright &copy; 2022 Football</p>
-                </div>
+                <p class="copyright">copyright &copy; 2022 Football</p>
             </div>
-        </footer>
-    </main>
+        </div>
+    </footer>
+
 </body>
 
 </html>
