--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <body>
     <main>
+
+        <!-- Title and Others -->
         <section class="head">
             <div class="head-title">
                 <h2>Conmebol</h2>
@@ -31,6 +33,8 @@
                 <img src="images\banner.jpg" alt="">
             </div>
         </section>
+
+        <!-- Photo Album -->
         <section class="photos">
             <div class="players">
                 <div class="player">
@@ -38,7 +42,7 @@
                         <img src="images/players/player-1.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Neymar</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -48,7 +52,7 @@
                         <img src="images/players/player-2.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Messi</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -58,7 +62,7 @@
                         <img src="images/players/player-3.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Ronaldo</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -68,7 +72,7 @@
                         <img src="images/players/player-4.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Dybala</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -78,7 +82,7 @@
                         <img src="images/players/player-5.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Ozil</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -88,7 +92,7 @@
                         <img src="images/players/player-6.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Mouro</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -98,7 +102,7 @@
                         <img src="images/players/player-7.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>DiMaria</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -108,7 +112,7 @@
                         <img src="images/players/player-8.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Mbappe</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -118,7 +122,7 @@
                         <img src="images/players/player-9.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Salah</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -128,7 +132,7 @@
                         <img src="images/players/player-10.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Kane</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -138,7 +142,7 @@
                         <img src="images/players/player-11.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Kevin</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -148,7 +152,7 @@
                         <img src="images/players/player-12.jpg" alt="">
                     </div>
                     <div class="player-detail">
-                        <h3>Player Name</h3>
+                        <h3>Pilipe</h3>
                         <p>The player is a world famous football player. He is a very energetic player. He has done
                             excellent performance in football history. </p>
                     </div>
@@ -156,7 +160,48 @@
             </div>
         </section>
 
+        <!-- Bonus Part 1 -->
+        <section class="media">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/S3B7Bvidrjo"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+        </section>
+
+        <!-- Bonus Part 2 -->
+        <div class="container">
+            <div class="players">
+                <div class="image-box">
+                    <img src="images/bonus/p.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>Edson Arantes do Nascimento, known as Pelé, is a Brazilian former professional
+                        footballer who played as a forward.</p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="image-box">
+                    <img src="images/bonus/p2.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>Diego Armando Maradona was an Argentine professional football player and manager.
+                        Widely regarded as one of the greatest players in the history of the sport.</p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="image-box">
+                    <img src="images/bonus/p4.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>Zinedine Yazid Zidane, popularly known as Zizou, is a French former professional
+                        football player who played as an attacking midfielder.</p>
+                </div>
+            </div>
+        </div>
     </main>
+
+    <!-- Footer & Copyright -->
     <footer class="footer">
 
         <div class="logo">
