--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p class="button">Watch Live →</p>
             </div>
             <div class="banner">
-                <img src="images\banner.jpg" alt="">
+                <img src="images/banner0.png" alt="">
             </div>
         </section>
 
